compiler/acton/test/syntaxerrors/err22.act
# Invalid comprehension syntax
def bad_comp():
    return [x for x in]